test/errors/error15.sp
%t is a ground term not belonging to corresponding sort
#maxint=5.
sorts
#s={a,b,f(a)}. 
predicates
p(#s).
rules
p(f(b)).
